--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,3 +29,6 @@ jobs:
 
       - name: Run MSBuild
         run: dotnet build --configuration "${{ matrix.configuration }}"
+
+      - name: Upload code coverage
+        uses: codecov/codecov-action@v2
