--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
       - ".github/dependabot.yml"
       - ".vscode/*"
       - "azure/*"
+      - "docs/*"
       - "host.json"
       - "**.md"
   pull_request:  
