--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -3,8 +3,28 @@ name: "CodeQL"
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - ".github/workflows/create-zip-artifact.yml"
+      - ".github/ISSUE_TEMPLATE/*"
+      - ".github/dependabot.yml"
+      - ".vscode/*"
+      - "azure/*"
+      - "docs/*"
+      - "host.json"
+      - "**.md"
   pull_request:
     branches: [ main ]
+    types:
+      - edited
+    paths-ignore:
+      - ".github/workflows/create-zip-artifact.yml"
+      - ".github/ISSUE_TEMPLATE/*"
+      - ".github/dependabot.yml"
+      - ".vscode/*"
+      - "azure/*"
+      - "docs/*"
+      - "host.json"
+      - "**.md"
   schedule:
     - cron: '39 0 * * 0'
 
