--- a/.github/ISSUE_TEMPLATE/Feature-changes.yml
+++ b/.github/ISSUE_TEMPLATE/Feature-changes.yml
@@ -25,6 +25,6 @@ body:
   - id: ProposedChangesDescription
     type: textarea
     attributes:
-      label: What's the proposed changes that need to be made?
+      label: What are the proposed changes that need to be made?
       description: A technical description of the proposed changes to be made. (Not required)
       placeholder: Insert the technical description of the changes...
