--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -12,6 +12,7 @@ on:
       - "docs/*"
       - "host.json"
       - "**.md"
+      - ".gitignore"
   pull_request:
     branches: [ main ]
     types:
@@ -25,6 +26,7 @@ on:
       - "docs/*"
       - "host.json"
       - "**.md"
+      - ".gitignore"
   schedule:
     - cron: '39 0 * * 0'
 
