Changed path for functions src

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "azureFunctions.deploySubpath": "bin/Release/net6.0/publish",
+    "azureFunctions.projectSubpath": "src/SmallsOnline.AVD.ResourceManager",
+    "azureFunctions.deploySubpath": "src\\SmallsOnline.AVD.ResourceManager/bin/Release/net6.0/publish",
     "azureFunctions.projectLanguage": "C#",
     "azureFunctions.projectRuntime": "~4",
     "debug.internalConsoleOptions": "neverOpen",
