--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -31,17 +31,25 @@ jobs:
       fail-fast: false
       matrix:
         language: [ 'csharp' ]
+        project-path: [ 'src/SmallsOnline.AVD.ResourceManager' ]
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Change directory
+      run: cd '${{ matrix.project-path }}'
+
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
       with:
         languages: ${{ matrix.language }}
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v1
+      
+    - name: Run dotnet restore
+      run: dotnet restore
+
+    - name: Run dotnet build
+      run: dotnet publish --configuration Release
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
