--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -37,26 +37,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Change directory
-        run: |
-          echo "Changing directory -> '${{ matrix.project_path }}'"
-          cd "${{ matrix.project_path }}"
-
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v1
         with:
           languages: ${{ matrix.language }}
+
           
       - name: Setup dotnet SDK
         uses: actions/setup-dotnet@v1.9.0
         with:
           dotnet-version: "6.0.x"
-        
-      - name: Run dotnet restore
-        run: dotnet restore
 
-      - name: Run dotnet build
-        run: dotnet publish --configuration Release
+      - name: Build library
+        run: |
+          dotnet restore
+          dotnet publish --configuration Release
+        working-directory: ${{ matrix.project_path }}
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
