Initial commit of model refactoring
All of the classes in the SmallsOnline.AVD.ResourceManager.Models
namespace have been moved to a separate class library for shared
classes, which is called SmallsOnline.AVD.ResourceManager.Lib.

--- a/src/SmallsOnline.AVD.ResourceManager/SmallsOnline.AVD.ResourceManager.csproj
+++ b/src/SmallsOnline.AVD.ResourceManager/SmallsOnline.AVD.ResourceManager.csproj
@@ -38,5 +38,9 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\SmallsOnline.AVD.ResourceManager.Lib\SmallsOnline.AVD.ResourceManager.Lib.csproj" />
+  </ItemGroup>
 
 </Project>
