--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,8 @@ updates:
       interval: "daily"
     labels:
       - "dependency update"
+    assignees:
+      - "Smalls1652"
   - package-ecosystem: "nuget"
     directory: "/src/SmallsOnline.AVD.ResourceManager.Lib/"
     open-pull-requests-limit: 10
@@ -14,3 +16,5 @@ updates:
       interval: "daily"
     labels:
       - "dependency update"
+    assignees:
+      - "Smalls1652"
